--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.4",
     "express": "~4.15.2",
     "helmet": "^3.15.0",
+    "ioredis": "^4.6.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.14.12",
     "redis": "^2.8.0"
