--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ioredis": "^4.6.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.14.12",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^3.3.2"
   },
   "author": "Adeyemi Kayode",
   "license": "ISC"
